src/manager/state/y.output

state 0
	$accept: .program $end 

	AND  shift 3
	OR  shift 4
	UNIQUE  shift 6
	LIKE  shift 7
	CONTAINS  shift 9
	NOT  shift 5
	EQUAL  shift 8
	.  error

	program  goto 1
	expr  goto 2

state 1
	$accept:  program.$end 

	$end  accept
	.  error


state 2
	program:  expr.    (1)

	.  reduce 1 (src line 42)


state 3
	expr:  AND.'(' expr ')' '(' expr ')' 

	'('  shift 10
	.  error


state 4
	expr:  OR.'(' expr ')' '(' expr ')' 

	'('  shift 11
	.  error


state 5
	expr:  NOT.'(' expr ')' 

	'('  shift 12
	.  error


state 6
	expr:  UNIQUE.what 

	IDENTIFIER  shift 14
	.  error

	what  goto 13

state 7
	expr:  LIKE.what param 

	IDENTIFIER  shift 14
	.  error

	what  goto 15

state 8
	expr:  EQUAL.what param 

	IDENTIFIER  shift 14
	.  error

	what  goto 16

state 9
	expr:  CONTAINS.what param 

	IDENTIFIER  shift 14
	.  error

	what  goto 17

state 10
	expr:  AND '('.expr ')' '(' expr ')' 

	AND  shift 3
	OR  shift 4
	UNIQUE  shift 6
	LIKE  shift 7
	CONTAINS  shift 9
	NOT  shift 5
	EQUAL  shift 8
	.  error

	expr  goto 18

state 11
	expr:  OR '('.expr ')' '(' expr ')' 

	AND  shift 3
	OR  shift 4
	UNIQUE  shift 6
	LIKE  shift 7
	CONTAINS  shift 9
	NOT  shift 5
	EQUAL  shift 8
	.  error

	expr  goto 19

state 12
	expr:  NOT '('.expr ')' 

	AND  shift 3
	OR  shift 4
	UNIQUE  shift 6
	LIKE  shift 7
	CONTAINS  shift 9
	NOT  shift 5
	EQUAL  shift 8
	.  error

	expr  goto 20

state 13
	expr:  UNIQUE what.    (5)

	.  reduce 5 (src line 53)


state 14
	what:  IDENTIFIER.    (9)

	.  reduce 9 (src line 58)


state 15
	expr:  LIKE what.param 

	IDENTIFIER  shift 22
	.  error

	param  goto 21

state 16
	expr:  EQUAL what.param 

	IDENTIFIER  shift 22
	.  error

	param  goto 23

state 17
	expr:  CONTAINS what.param 

	IDENTIFIER  shift 22
	.  error

	param  goto 24

state 18
	expr:  AND '(' expr.')' '(' expr ')' 

	')'  shift 25
	.  error


state 19
	expr:  OR '(' expr.')' '(' expr ')' 

	')'  shift 26
	.  error


state 20
	expr:  NOT '(' expr.')' 

	')'  shift 27
	.  error


state 21
	expr:  LIKE what param.    (6)

	.  reduce 6 (src line 54)


state 22
	param:  IDENTIFIER.    (10)

	.  reduce 10 (src line 59)


state 23
	expr:  EQUAL what param.    (7)

	.  reduce 7 (src line 55)


state 24
	expr:  CONTAINS what param.    (8)

	.  reduce 8 (src line 56)


state 25
	expr:  AND '(' expr ')'.'(' expr ')' 

	'('  shift 28
	.  error


state 26
	expr:  OR '(' expr ')'.'(' expr ')' 

	'('  shift 29
	.  error


state 27
	expr:  NOT '(' expr ')'.    (4)

	.  reduce 4 (src line 52)


state 28
	expr:  AND '(' expr ')' '('.expr ')' 

	AND  shift 3
	OR  shift 4
	UNIQUE  shift 6
	LIKE  shift 7
	CONTAINS  shift 9
	NOT  shift 5
	EQUAL  shift 8
	.  error

	expr  goto 30

state 29
	expr:  OR '(' expr ')' '('.expr ')' 

	AND  shift 3
	OR  shift 4
	UNIQUE  shift 6
	LIKE  shift 7
	CONTAINS  shift 9
	NOT  shift 5
	EQUAL  shift 8
	.  error

	expr  goto 31

state 30
	expr:  AND '(' expr ')' '(' expr.')' 

	')'  shift 32
	.  error


state 31
	expr:  OR '(' expr ')' '(' expr.')' 

	')'  shift 33
	.  error


state 32
	expr:  AND '(' expr ')' '(' expr ')'.    (2)

	.  reduce 2 (src line 49)


state 33
	expr:  OR '(' expr ')' '(' expr ')'.    (3)

	.  reduce 3 (src line 51)


13 terminals, 5 nonterminals
11 grammar rules, 34/8000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
54 working sets used
memory: parser 13/120000
31 extra closures
59 shift entries, 1 exceptions
14 goto entries
0 entries saved by goto default
Optimizer space used: output 35/120000
35 table entries, 2 zero
maximum spread: 13, maximum offset: 29
